--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -873,6 +873,7 @@
 "going_to_report_user" = "Вы собираетесь пожаловаться на данного пользователя.";
 "going_to_report_video" = "Вы собираетесь пожаловаться на данную видеозапись.";
 "going_to_report_post" = "Вы собираетесь пожаловаться на данную запись.";
+"going_to_report_comment" = "Вы собираетесь пожаловаться на данный комментарий.";
 
 "comment" = "Комментарий";
 "sender" = "Отправитель";
